Tweak the script font to fix the gap after t and g.

--- a/source/stonehearth_data/mods/stonehearth/ui/root/css/fonts/scriptina/stylesheet.css
+++ b/source/stonehearth_data/mods/stonehearth/ui/root/css/fonts/scriptina/stylesheet.css
@@ -1,15 +1,15 @@
-/* Generated by Font Squirrel (http://www.fontsquirrel.com) on January 29, 2015 */
+/* Generated by Font Squirrel (http://www.fontsquirrel.com) on March 9, 2015 */
 
 
 
 @font-face {
     font-family: 'scriptinaregular';
-    src: url('scriptin-webfont.eot');
-    src: url('scriptin-webfont.eot?#iefix') format('embedded-opentype'),
-         url('scriptin-webfont.woff2') format('woff2'),
-         url('scriptin-webfont.woff') format('woff'),
-         url('scriptin-webfont.ttf') format('truetype'),
-         url('scriptin-webfont.svg#scriptinaregular') format('svg');
+    src: url('SCRIPTIN_RADIANT-webfont.eot');
+    src: url('SCRIPTIN_RADIANT-webfont.eot?#iefix') format('embedded-opentype'),
+         url('SCRIPTIN_RADIANT-webfont.woff2') format('woff2'),
+         url('SCRIPTIN_RADIANT-webfont.woff') format('woff'),
+         url('SCRIPTIN_RADIANT-webfont.ttf') format('truetype'),
+         url('SCRIPTIN_RADIANT-webfont.svg#scriptinaregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
